seaqt/QtCore/gen_qxmlstream.h

class QXmlStreamAttribute;
class QXmlStreamEntityDeclaration;
class QXmlStreamEntityResolver;
class QXmlStreamNamespaceDeclaration;
class QXmlStreamNotationDeclaration;
class QXmlStreamStringRef;
typedef struct QIODevice QIODevice;
typedef struct QXmlStreamAttribute QXmlStreamAttribute;
typedef struct QXmlStreamEntityDeclaration QXmlStreamEntityDeclaration;
typedef struct QXmlStreamEntityResolver QXmlStreamEntityResolver;
typedef struct QXmlStreamNamespaceDeclaration QXmlStreamNamespaceDeclaration;
typedef struct QXmlStreamNotationDeclaration QXmlStreamNotationDeclaration;
typedef struct QXmlStreamReader QXmlStreamReader;
typedef struct QXmlStreamStringRef QXmlStreamStringRef;
typedef struct QXmlStreamWriter QXmlStreamWriter;
QXmlStreamWriter* QXmlStreamWriter_new();
QXmlStreamWriter* QXmlStreamWriter_new2(QIODevice* device);
void QXmlStreamWriter_writeAttributeWithAttribute(QXmlStreamWriter* self, QXmlStreamAttribute* attribute);
void QXmlStreamWriter_writeCDATA(QXmlStreamWriter* self, struct seaqt_string text);
void QXmlStreamWriter_writeCharacters(QXmlStreamWriter* self, struct seaqt_string text);
void QXmlStreamWriter_writeComment(QXmlStreamWriter* self, struct seaqt_string text);
void QXmlStreamWriter_writeDTD(QXmlStreamWriter* self, struct seaqt_string dtd);
void QXmlStreamWriter_writeEmptyElement(QXmlStreamWriter* self, struct seaqt_string qualifiedName);
void QXmlStreamWriter_writeEmptyElement2(QXmlStreamWriter* self, struct seaqt_string namespaceUri, struct seaqt_string name);
void QXmlStreamWriter_writeTextElement(QXmlStreamWriter* self, struct seaqt_string qualifiedName, struct seaqt_string text);
void QXmlStreamWriter_writeTextElement2(QXmlStreamWriter* self, struct seaqt_string namespaceUri, struct seaqt_string name, struct seaqt_string text);
void QXmlStreamWriter_writeEndDocument(QXmlStreamWriter* self);
void QXmlStreamWriter_writeEndElement(QXmlStreamWriter* self);
void QXmlStreamWriter_writeEntityReference(QXmlStreamWriter* self, struct seaqt_string name);
void QXmlStreamWriter_writeNamespace(QXmlStreamWriter* self, struct seaqt_string namespaceUri);
void QXmlStreamWriter_writeDefaultNamespace(QXmlStreamWriter* self, struct seaqt_string namespaceUri);
void QXmlStreamWriter_writeProcessingInstruction(QXmlStreamWriter* self, struct seaqt_string target);
void QXmlStreamWriter_writeStartDocument(QXmlStreamWriter* self);
void QXmlStreamWriter_writeStartDocumentWithVersion(QXmlStreamWriter* self, struct seaqt_string version);
void QXmlStreamWriter_writeStartDocument2(QXmlStreamWriter* self, struct seaqt_string version, bool standalone);
void QXmlStreamWriter_writeStartElement(QXmlStreamWriter* self, struct seaqt_string qualifiedName);
void QXmlStreamWriter_writeStartElement2(QXmlStreamWriter* self, struct seaqt_string namespaceUri, struct seaqt_string name);
void QXmlStreamWriter_writeCurrentToken(QXmlStreamWriter* self, QXmlStreamReader* reader);
bool QXmlStreamWriter_hasError(const QXmlStreamWriter* self);
void QXmlStreamWriter_writeNamespace2(QXmlStreamWriter* self, struct seaqt_string namespaceUri, struct seaqt_string prefix);
void QXmlStreamWriter_writeProcessingInstruction2(QXmlStreamWriter* self, struct seaqt_string target, struct seaqt_string data);