seaqt/QtCore/gen_qxmlstream.nim

proc fcQXmlStreamWriter_writeAttributeWithAttribute(self: pointer, attribute: pointer): void {.importc: "QXmlStreamWriter_writeAttributeWithAttribute".}
proc fcQXmlStreamWriter_writeCDATA(self: pointer, text: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeCDATA".}
proc fcQXmlStreamWriter_writeCharacters(self: pointer, text: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeCharacters".}
proc fcQXmlStreamWriter_writeComment(self: pointer, text: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeComment".}
proc fcQXmlStreamWriter_writeDTD(self: pointer, dtd: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeDTD".}
proc fcQXmlStreamWriter_writeEmptyElement(self: pointer, qualifiedName: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeEmptyElement".}
proc fcQXmlStreamWriter_writeEmptyElement2(self: pointer, namespaceUri: struct_miqt_string, name: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeEmptyElement2".}
proc fcQXmlStreamWriter_writeTextElement(self: pointer, qualifiedName: struct_miqt_string, text: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeTextElement".}
proc fcQXmlStreamWriter_writeTextElement2(self: pointer, namespaceUri: struct_miqt_string, name: struct_miqt_string, text: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeTextElement2".}
proc fcQXmlStreamWriter_writeEndDocument(self: pointer, ): void {.importc: "QXmlStreamWriter_writeEndDocument".}
proc fcQXmlStreamWriter_writeEndElement(self: pointer, ): void {.importc: "QXmlStreamWriter_writeEndElement".}
proc fcQXmlStreamWriter_writeEntityReference(self: pointer, name: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeEntityReference".}
proc fcQXmlStreamWriter_writeNamespace(self: pointer, namespaceUri: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeNamespace".}
proc fcQXmlStreamWriter_writeDefaultNamespace(self: pointer, namespaceUri: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeDefaultNamespace".}
proc fcQXmlStreamWriter_writeProcessingInstruction(self: pointer, target: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeProcessingInstruction".}
proc fcQXmlStreamWriter_writeStartDocument(self: pointer, ): void {.importc: "QXmlStreamWriter_writeStartDocument".}
proc fcQXmlStreamWriter_writeStartDocumentWithVersion(self: pointer, version: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartDocumentWithVersion".}
proc fcQXmlStreamWriter_writeStartDocument2(self: pointer, version: struct_miqt_string, standalone: bool): void {.importc: "QXmlStreamWriter_writeStartDocument2".}
proc fcQXmlStreamWriter_writeStartElement(self: pointer, qualifiedName: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartElement".}
proc fcQXmlStreamWriter_writeStartElement2(self: pointer, namespaceUri: struct_miqt_string, name: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartElement2".}
proc fcQXmlStreamWriter_writeCurrentToken(self: pointer, reader: pointer): void {.importc: "QXmlStreamWriter_writeCurrentToken".}
proc fcQXmlStreamWriter_hasError(self: pointer, ): bool {.importc: "QXmlStreamWriter_hasError".}
proc fcQXmlStreamWriter_writeNamespace2(self: pointer, namespaceUri: struct_miqt_string, prefix: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeNamespace2".}
proc fcQXmlStreamWriter_writeProcessingInstruction2(self: pointer, target: struct_miqt_string, data: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeProcessingInstruction2".}
proc fcQXmlStreamWriter_new(): ptr cQXmlStreamWriter {.importc: "QXmlStreamWriter_new".}
proc fcQXmlStreamWriter_new2(device: pointer): ptr cQXmlStreamWriter {.importc: "QXmlStreamWriter_new2".}

proc operatorAssign*(self: gen_qxmlstream_types.QXmlStreamStringRef, other: gen_qxmlstream_types.QXmlStreamStringRef): void =
  fcQXmlStreamStringRef_operatorAssign(self.h, other.h)

proc swap*(self: gen_qxmlstream_types.QXmlStreamStringRef, other: gen_qxmlstream_types.QXmlStreamStringRef): void =
  fcQXmlStreamStringRef_swap(self.h, other.h)

proc clear*(self: gen_qxmlstream_types.QXmlStreamStringRef, ): void =
  fcQXmlStreamStringRef_clear(self.h)

proc string*(self: gen_qxmlstream_types.QXmlStreamStringRef, ): string =
  let v_ms = fcQXmlStreamStringRef_string(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc position*(self: gen_qxmlstream_types.QXmlStreamStringRef, ): cint =
  fcQXmlStreamStringRef_position(self.h)

proc size*(self: gen_qxmlstream_types.QXmlStreamStringRef, ): cint =
  fcQXmlStreamStringRef_size(self.h)

proc create*(T: type gen_qxmlstream_types.QXmlStreamStringRef): gen_qxmlstream_types.QXmlStreamStringRef =
  gen_qxmlstream_types.QXmlStreamStringRef(h: fcQXmlStreamStringRef_new(), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamStringRef,
    aString: string): gen_qxmlstream_types.QXmlStreamStringRef =
  gen_qxmlstream_types.QXmlStreamStringRef(h: fcQXmlStreamStringRef_new2(struct_miqt_string(data: aString, len: csize_t(len(aString)))), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamStringRef,
    other: gen_qxmlstream_types.QXmlStreamStringRef): gen_qxmlstream_types.QXmlStreamStringRef =
  gen_qxmlstream_types.QXmlStreamStringRef(h: fcQXmlStreamStringRef_new3(other.h), owned: true)

proc operatorAssign*(self: gen_qxmlstream_types.QXmlStreamAttribute, param1: gen_qxmlstream_types.QXmlStreamAttribute): void =
  fcQXmlStreamAttribute_operatorAssign(self.h, param1.h)

proc isDefault*(self: gen_qxmlstream_types.QXmlStreamAttribute, ): bool =
  fcQXmlStreamAttribute_isDefault(self.h)

proc operatorEqual*(self: gen_qxmlstream_types.QXmlStreamAttribute, other: gen_qxmlstream_types.QXmlStreamAttribute): bool =
  fcQXmlStreamAttribute_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qxmlstream_types.QXmlStreamAttribute, other: gen_qxmlstream_types.QXmlStreamAttribute): bool =
  fcQXmlStreamAttribute_operatorNotEqual(self.h, other.h)

proc create*(T: type gen_qxmlstream_types.QXmlStreamAttribute): gen_qxmlstream_types.QXmlStreamAttribute =
  gen_qxmlstream_types.QXmlStreamAttribute(h: fcQXmlStreamAttribute_new(), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamAttribute,
    qualifiedName: string, value: string): gen_qxmlstream_types.QXmlStreamAttribute =
  gen_qxmlstream_types.QXmlStreamAttribute(h: fcQXmlStreamAttribute_new2(struct_miqt_string(data: qualifiedName, len: csize_t(len(qualifiedName))), struct_miqt_string(data: value, len: csize_t(len(value)))), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamAttribute,
    namespaceUri: string, name: string, value: string): gen_qxmlstream_types.QXmlStreamAttribute =
  gen_qxmlstream_types.QXmlStreamAttribute(h: fcQXmlStreamAttribute_new3(struct_miqt_string(data: namespaceUri, len: csize_t(len(namespaceUri))), struct_miqt_string(data: name, len: csize_t(len(name))), struct_miqt_string(data: value, len: csize_t(len(value)))), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamAttribute,
    param1: gen_qxmlstream_types.QXmlStreamAttribute): gen_qxmlstream_types.QXmlStreamAttribute =
  gen_qxmlstream_types.QXmlStreamAttribute(h: fcQXmlStreamAttribute_new4(param1.h), owned: true)

proc operatorAssign*(self: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration, param1: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration): void =
  fcQXmlStreamNamespaceDeclaration_operatorAssign(self.h, param1.h)

proc operatorEqual*(self: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration, other: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration): bool =
  fcQXmlStreamNamespaceDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration, other: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration): bool =
  fcQXmlStreamNamespaceDeclaration_operatorNotEqual(self.h, other.h)

proc create*(T: type gen_qxmlstream_types.QXmlStreamNamespaceDeclaration): gen_qxmlstream_types.QXmlStreamNamespaceDeclaration =
  gen_qxmlstream_types.QXmlStreamNamespaceDeclaration(h: fcQXmlStreamNamespaceDeclaration_new(), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamNamespaceDeclaration,
    prefix: string, namespaceUri: string): gen_qxmlstream_types.QXmlStreamNamespaceDeclaration =
  gen_qxmlstream_types.QXmlStreamNamespaceDeclaration(h: fcQXmlStreamNamespaceDeclaration_new2(struct_miqt_string(data: prefix, len: csize_t(len(prefix))), struct_miqt_string(data: namespaceUri, len: csize_t(len(namespaceUri)))), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamNamespaceDeclaration,
    param1: gen_qxmlstream_types.QXmlStreamNamespaceDeclaration): gen_qxmlstream_types.QXmlStreamNamespaceDeclaration =
  gen_qxmlstream_types.QXmlStreamNamespaceDeclaration(h: fcQXmlStreamNamespaceDeclaration_new3(param1.h), owned: true)

proc operatorAssign*(self: gen_qxmlstream_types.QXmlStreamNotationDeclaration, param1: gen_qxmlstream_types.QXmlStreamNotationDeclaration): void =
  fcQXmlStreamNotationDeclaration_operatorAssign(self.h, param1.h)

proc operatorEqual*(self: gen_qxmlstream_types.QXmlStreamNotationDeclaration, other: gen_qxmlstream_types.QXmlStreamNotationDeclaration): bool =
  fcQXmlStreamNotationDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qxmlstream_types.QXmlStreamNotationDeclaration, other: gen_qxmlstream_types.QXmlStreamNotationDeclaration): bool =
  fcQXmlStreamNotationDeclaration_operatorNotEqual(self.h, other.h)

proc create*(T: type gen_qxmlstream_types.QXmlStreamNotationDeclaration): gen_qxmlstream_types.QXmlStreamNotationDeclaration =
  gen_qxmlstream_types.QXmlStreamNotationDeclaration(h: fcQXmlStreamNotationDeclaration_new(), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamNotationDeclaration,
    param1: gen_qxmlstream_types.QXmlStreamNotationDeclaration): gen_qxmlstream_types.QXmlStreamNotationDeclaration =
  gen_qxmlstream_types.QXmlStreamNotationDeclaration(h: fcQXmlStreamNotationDeclaration_new2(param1.h), owned: true)

proc operatorAssign*(self: gen_qxmlstream_types.QXmlStreamEntityDeclaration, param1: gen_qxmlstream_types.QXmlStreamEntityDeclaration): void =
  fcQXmlStreamEntityDeclaration_operatorAssign(self.h, param1.h)

proc operatorEqual*(self: gen_qxmlstream_types.QXmlStreamEntityDeclaration, other: gen_qxmlstream_types.QXmlStreamEntityDeclaration): bool =
  fcQXmlStreamEntityDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qxmlstream_types.QXmlStreamEntityDeclaration, other: gen_qxmlstream_types.QXmlStreamEntityDeclaration): bool =
  fcQXmlStreamEntityDeclaration_operatorNotEqual(self.h, other.h)

proc create*(T: type gen_qxmlstream_types.QXmlStreamEntityDeclaration): gen_qxmlstream_types.QXmlStreamEntityDeclaration =
  gen_qxmlstream_types.QXmlStreamEntityDeclaration(h: fcQXmlStreamEntityDeclaration_new(), owned: true)

proc create*(T: type gen_qxmlstream_types.QXmlStreamEntityDeclaration,
    param1: gen_qxmlstream_types.QXmlStreamEntityDeclaration): gen_qxmlstream_types.QXmlStreamEntityDeclaration =
  gen_qxmlstream_types.QXmlStreamEntityDeclaration(h: fcQXmlStreamEntityDeclaration_new2(param1.h), owned: true)

proc resolveEntity*(self: gen_qxmlstream_types.QXmlStreamEntityResolver, publicId: string, systemId: string): string =
  let v_ms = fcQXmlStreamEntityResolver_resolveEntity(self.h, struct_miqt_string(data: publicId, len: csize_t(len(publicId))), struct_miqt_string(data: systemId, len: csize_t(len(systemId))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
